tests/ui/asm/aarch64/srcloc.new.stderr
error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:15:15
   |
LL |         asm!("invalid_instruction");
   |               ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:19:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:24:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:30:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:37:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:42:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:46:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:52:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:59:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:66:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:73:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:80:14
   |
LL |             "invalid_instruction1",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:81:14
   |
LL |             "invalid_instruction2",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:87:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:87:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:96:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:96:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:100:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:100:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:111:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:111:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:115:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:115:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:128:14
   |
LL |             "invalid_instruction"
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^

error: aborting due to 24 previous errors

